Version 1.20.4 *
==================
- Fixed crash when saving a file to an existing file of the same project.
- Fixed completer suggests DCO at wrong place.

Version 1.20.3
==================
- Fixed missing universe domain in Reference File Viewer.
- Fixed dialog waiting for printer connection during Studio startup.
- Fixed selection of the default encoding, which was not persistent.
- Fixed Reset button in encodings dialog.
- Improved default selection of encodings, i.e. the ecodings dialog starts with a reduced pre-selection.
- Improved behavior when Studio is starting on a system with a reduced number of encodings. In this case the previous user selection is kept but might not be selectable.
- Improved block edit behaviour, i.e. backspace is blocked when the cursor is in the first column.

Version 1.20.2
==================
- Added an entry to clear the errors of the current project, to the context menu of the line numbers.
- Fixed state of the `Apply` button, when the `Update` settings have changed.
- Fixed the settings information `Last check date`, when checking for updates has been executed.
- Improved the text context menu entries for removing file(s) or project(s) listed in the Project View.
- Improved information message when the International Components for Unicode (ICU) support is missing.

Version 1.20.1
==================
- Fixed missing font update from changes in the Settings Dialog.
- Fixed Workspace cleanup Settings when Studio starts.
- Moved the list of files to be deleted to the details view when cleaning up workspace on startup.
- Dropped support for openSUSE Leap 15.6.
- Added support for Fedora 41 and Ubuntu 24.04 LTS.
- A GAMS Engine run from Studio can now select pool instances, too.
- A GAMS Engine pool instance can be scaled up and down from within Studio.

Version 1.20.0
==================
- Added fonts JetBrains Mono, Source Code Pro, Fira Code, and Cousine.