@@ -2,6 +2,7 @@ Version 1.20.4 *
 ==================
 - Fixed crash when saving a file to an existing file of the same project.
 - Fixed completer suggests DCO at wrong place.
+- Fixed block-edit scroll behavior, when the cursor moved up the view now scrolls to the first line of the block selection.
 
 Version 1.20.3
 ==================
